--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -50,18 +50,18 @@ table {
 body {
   font-size: 1em;
   line-height: 1.5;
-  background: #e7e7e7 url(../images/img5779copy.jpg) 0 0 no-repeat;
+  background: #110a01 url(../images/img5779copy.jpg) 0 0 no-repeat;
 	background-size: 100%;
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
-  color: #6d6d6d;
+  text-shadow: 0 0 0 rgba(255, 255, 255, 0.8);
+  color: #FFA100;
 }
 
 a {
-  color: #d5000d;
+  color: #E82800;
 }
 a:hover {
-  color: #c5000c;
+  color: #FF0200;
 }
 
 header {
@@ -278,6 +278,7 @@ h6 {
 p {
   font-weight: 300;
   margin-bottom: 20px;
+	color: #FF5500;
 }
 
 a {
@@ -339,15 +340,22 @@ footer a:hover {
 .clearfix {display: block;}
 
 /* Content */
+/* gold FFA100 */
+/* brown 7A3C00 */
+/* orange FF5500 */
+/* red E82800 */
+/* red FF0200 */
+
 .bgrnd {
 	text-transform: uppercase;
 	text-align: center;
 	font-family: Helvetica;
-	color: #333333;
+	color: #FFA100;
 }
 
 .nameheader {
 	margin-top: 18em;
+	text-align: center;
 }
 
 .nameheader h1 {
@@ -362,11 +370,11 @@ footer a:hover {
 .social-icons .icon-large:before {
 	font-size: 4em;
 	text-align: center;
-	color: #333333;
+	color: #FFA100;
 }
 
 .social-icons a {
-	margin-right: 2em;
+	margin-right: 5em;
 }
 
 .social-icons a, .social-icons a i {
