--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -27,6 +27,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+html, body {
+    height: 100%;
+}
 body {
 	line-height: 1;
 }
@@ -51,7 +54,8 @@ body {
   font-size: 1em;
   line-height: 1.5;
   background: #110a01 url(../images/img5779copy.jpg) 0 0 no-repeat;
-	background-size: 100%;
+  background-size: auto 100%;
+  background-position: left top;
   font-family: 'Helvetica Neue', Helvetica, Arial, serif;
   color: #FFA100;
 }
@@ -408,7 +412,11 @@ footer a:hover {
 }
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-@media only screen and (min-width: 480px) and (max-width: 767px) {}
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    .nameheader h1 {
+        width: 100%;
+    }
+}
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {}
